fix: separate overlapping title characters

--- a/css/sections.css
+++ b/css/sections.css
@@ -4,7 +4,7 @@
 }
 
 .intro-title {
-  width: 320px;
+  width: 360px;
   height: 160px;
   overflow: visible;
 }
